Dodanie pierwszych obrazków i linków

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,17 +1,32 @@
 
-@online{watki_jak_pisac,
-  author = {brak danych},
-  title = {title},
-  year = {http://robsraspberrypi.blogspot.com/2016/01/raspberry-pi-python-threading.html},
-  url = {http://robsraspberrypi.blogspot.com/2016/01/raspberry-pi-python-threading.html},
-  urldate = {http://robsraspberrypi.blogspot.com/2016/01/raspberry-pi-python-threading.html}
+@online{popularnosc_gogli,
+  author = {Steam},
+  title = {{Ankieta używanego sprzętu na steam}},
+  howpublished = "\newline \url{https://store.steampowered.com/hwsurvey}",
+  year = { }, 
+  note = "[]"
 }
 
+@online{PlayStation_VR2,
+  author = {Sony},
+  title = {{Zapowiedź PlayStation VR2}},
+  howpublished = "\newline \url{https://www.playstation.com/pl-pl/ps-vr2/}",
+  year = { }, 
+  note = "[]"
+}
 
-@online{bworld,
-  author = {Ingo Lütkebohle},
-  title = {{BWorld Robot Control Software}},
-  howpublished = "\url{http://aiweb.techfak.uni-bielefeld.de/content/bworld-robot-control-software/}",
-  year = {2008}, 
-  note = "[Online; accessed 19-July-2008]"
+@online{porownanie_gogli,
+  author = {VRcompare},
+  title = {{Compare Oculus Quest and Oculus Quest 2}},
+  howpublished = "\newline \url{https://vr-compare.com/compare?h1=pDTZ02PkT&h2=GeZ01ojF8}",
+  year = { }, 
+  note = "[]"
+}
+
+@online{sprzedasz_gogli_VR,
+  author = {IDC},
+  title = {{AR/VR Headset Shipments Grew Dramatically in 2021}},
+  howpublished = "\newline \url{https://www.idc.com/getdoc.jsp?containerId=prUS48969722}",
+  year = { }, 
+  note = "[]"
 }
