Dodano spis treści

--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -218,6 +218,39 @@ VR, człowiek jest w stanie stworzyć program w mało wymagający sposób który
 byłby możliwy do zrealizowania jeszcze 10 lat temu.
 
 \newpage
+\section{Warstwa Użytkowa}
+
+\subsection{Wygląd i Obsługa programu}
+\subsection{Cześć Galerii Programu}
+\subsection{Część pokazowa modeli programu programu}
+
+\section{Warstwa Programistyczna}
+
+\subsection{Język C++}
+\subsection{Unreal Engine 4}
+
+
+\section{Jakie modele się znajdują}
+
+\subsection{Gra w życie}
+\subsubsection{Gra w życie - kod}
+\subsection{Wahadło Podwójne}
+\subsubsection{Wahadło Podwójne - kod}
+\subsection{Motyl}
+\subsubsection{Motyl - kod}
+\subsection{Model Agentowy}
+\subsubsection{Model Agentowy - kod}
+\subsection{Boids}
+\subsubsection{Boids - kod}
+
+
+
+\section{Realizacja projektu}
+
+\section{Wnioski}
+
+
+\newpage
 
 \bibliographystyle{unsrt}
 \bibliography{bibliografia}
