początek pisania warstwy użytkowej programu

--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -221,6 +221,8 @@ byłby możliwy do zrealizowania jeszcze 10 lat temu.
 \section{Warstwa Użytkowa}
 
 \subsection{Wygląd i Obsługa programu}
+
+Program do uruchomienia wymaga gogli VR np. Oculus Quest i kontrolerów ruchowych. Można poruszać się po planszy na dwa sposoby. Pierwszy polega na użyciu lewego thumbsticka dzięki czemu można poruszać się płynnie po planszy. Drugi natomiast polega na teleportacji, po naciśnięciu przycisku B na prawy kontrolerze i wybraniu miejsca planszy gdzie chcemy się teleportować.
 \subsection{Cześć Galerii Programu}
 \subsection{Część pokazowa modeli programu programu}
 
