Rozszerzono sekcję wygląd i obsługa programu

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -30,3 +30,11 @@
   year = { }, 
   note = "[]"
 }
+
+@online{choroba_vr,
+  author = {IDC},
+  title = {{Choroba Symulatorowa}},
+  howpublished = "\newline \url{https://vrpolska.eu/skad-sie-bierze-choroba-symulatorowa/}",
+  year = { }, 
+  note = "[]"
+}
