--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -222,9 +222,34 @@ byłby możliwy do zrealizowania jeszcze 10 lat temu.
 
 \subsection{Wygląd i Obsługa programu}
 
-Program do uruchomienia wymaga gogli VR np. Oculus Quest i kontrolerów ruchowych. Można poruszać się po planszy na dwa sposoby. Pierwszy polega na użyciu lewego thumbsticka dzięki czemu można poruszać się płynnie po planszy. Drugi natomiast polega na teleportacji, po naciśnięciu przycisku B na prawy kontrolerze i wybraniu miejsca planszy gdzie chcemy się teleportować.
+Program do uruchomienia wymaga gogli VR np. Oculus Quest i kontrolerów ruchowych. Można poruszać się po planszy na dwa sposoby. Pierwszy polega na użyciu lewego thumbsticka dzięki czemu można poruszać się płynnie po planszy, podczas poruszania się po planszy zmniejsza się obraz aby osoby które mają chorobę symulatorową\cite{choroba_vr} lepiej znosiły takie poruszanie się po poziomie. Drugi natomiast polega na teleportacji, po naciśnięciu przycisku B na prawy kontrolerze i wybraniu miejsca planszy gdzie chcemy się teleportować, jest to sposób poruszania się bardziej przyjazny dla osób z chorobą symulatorową.
+
+\begin{figure}[!ht]%
+	\centering
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includegraphics[width=0.8\linewidth]{graphics/tunnelvision.png}
+		\caption{Tunnel Vision}	
+		\label{ref:subref_a}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includegraphics[width=0.8\linewidth]{graphics/teleportmove.png}
+		\caption{Teleport Move}
+		\label{ref:subref_b}
+	\end{subfigure}%
+
+\caption{Różny rodzaj poruszania się w programię}
+\label{ref:ref}
+\end{figure}
+
 \subsection{Cześć Galerii Programu}
+
+W części galerii możesz dowiedzieć się o danym modelu
+
 \subsection{Część pokazowa modeli programu programu}
+
+W części galerii możesz możesz zobaczyć jak model wygląda w ruchu. Modele obsługuję się za pomocą kontrolerów ruchowych. W zależności od modelu interakcja wygląda trochę inaczej, szczegółowo każda zostanie omówiona w sekcji dotyczącej danego modelu.
 
 \section{Warstwa Programistyczna}
 
