Rozpoczęcie pisania 3 rozdziału

--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -239,22 +239,28 @@ Program do uruchomienia wymaga gogli VR np. Oculus Quest i kontrolerów ruchowyc
 		\label{ref:subref_b}
 	\end{subfigure}%
 
-\caption{Różny rodzaj poruszania się w programię}
+\caption{Różny rodzaj poruszania się w programie}
 \label{ref:ref}
 \end{figure}
 
 \subsection{Cześć Galerii Programu}
 
-W części galerii możesz dowiedzieć się o danym modelu
-
+W tej części można poczytać i dowiedzieć się trochę o danym modelu. Swoim wyglądem przypomina to galerię obrazów, gdzie osoba podchodzi do danej ciekawostki i może ją przeczytać.
 \subsection{Część pokazowa modeli programu programu}
 
-W części galerii możesz możesz zobaczyć jak model wygląda w ruchu. Modele obsługuję się za pomocą kontrolerów ruchowych. W zależności od modelu interakcja wygląda trochę inaczej, szczegółowo każda zostanie omówiona w sekcji dotyczącej danego modelu.
+Ta część galerii ma pokazać użytkownikowi programu w jaki sposób wygląda dany model w działaniu. Modele obsługuję się za pomocą kontrolerów ruchowych. W zależności od modelu interakcja wygląda trochę inaczej, szczegółowo każda zostanie omówiona w sekcji dotyczącej danego modelu. 
 
 \section{Warstwa Programistyczna}
 
-\subsection{Język C++}
 \subsection{Unreal Engine 4}
+
+Program był pisany w silniku Unreal Engine 4, z powodu że korzystam z tego silnika na codzień w swojej pracy. Sam silnik wspiera taż bez większym problemów gogle VR, dzięki pluginowi stworzonemu przez twórców silnika.
+
+\subsection{Język C++}
+
+
+
+
 
 
 \section{Jakie modele się znajdują}
