Rozpoczęcie pisania o wahadle podwójnym

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -38,3 +38,11 @@
   year = { }, 
   note = "[]"
 }
+
+@online{double_pendulum,
+  author = {IDC},
+  title = {{Wahadło podwójne}},
+  howpublished = "\newline \url{https://web.archive.org/web/*/http://www.team.kdm.p.lodz.pl/master/Jankowski.pdf/}",
+  year = { }, 
+  note = "[]"
+}
